# platform-disk-api

./: .dockerignore  .gitignore  .pre-commit-config.yaml  Dockerfile  Makefile  README.md  minikube.sh  pyproject.toml  setup.cfg  setup.py
.github/: dependabot.yml
.github/workflows/: ci.yaml  release-image.yml  release.yml  setup-automerge.yml  test.yaml
charts/platform-disks/: Chart.yaml  values-dev.yaml  values.yaml
charts/platform-disks/charts/: admission-controller-lib-0.1.17.tgz
charts/platform-disks/templates/: _helpers.tpl  admission-controller-deployment.yaml  admission-controller-service.yaml  crd-disknaming.yaml  deployment.yaml  ingress.yaml  project-namespace-migration.yaml  rbac.yaml  secrets.yaml  service.yaml  watcher-deployment.yaml
deploy/platformdiskapi/: Chart.yaml  values-dev-aws.yaml  values-dev-azure.yaml  values-dev.yaml  values-onprem.yaml  values-template.yaml
deploy/platformdiskapi/templates/: crd-disk-names.yaml  deployment.yaml  ingress.yaml  rbac.yaml  service.yaml  storageclass.yaml  watcher-deployment.yaml
platform_disk_api/: __main__.py  api.py  config.py  config_factory.py  identity.py  kube_client.py  platform_deleter.py  project_namespace_migration_job.py  schema.py  service.py  usage_watcher.py  utils.py
platform_disk_api/admission_controller/: __main__.py  api.py  schema.py
requirements/: syntax.txt  test.txt
tests/integration/: auth.py  conftest.py  conftest_admin.py  conftest_auth.py  conftest_clusters.py  conftest_events.py  conftest_kube.py  docker.py  kube.py  kube_stub.py  migrations.py  stubs.py  test_admission_controller.py  test_api.py  test_kube_client.py  test_project_deleter.py  test_service.py  test_usage_watcher.py
tests/k8s/: admission-controller-deployment.yaml  cluster.sh  crd-disk-names.yaml  crd-disknaming.yml  platformapi.yml  postinstall-job.yaml  preinstall-job.yaml  rbac.yaml  storageclass.yml
tests/unit/: test_config.py  test_pods.py  test_pvc.py  test_schema.py
