[metadata]
name = platform-disk-api
description = Neu.ro platform disk api
url = https://github.com/neuro-inc/platform-disk-api
long_description = file: README.md, LICENSE
license = Apache 2
classifiers =
    License :: OSI Approved :: Apache 2
    Programming Language :: Python :: 3

[options]
zip_safe = False
python_requires = >=3.8
include_package_data = True
packages = find:
platforms = any
install_requires =
    aiohttp==3.7.4.post0
    yarl==1.7.0
    neuro-auth-client==21.9.13.1
    marshmallow==3.14.0
    aiohttp-apispec==2.2.1
    neuro-logging==21.10.2
    aiohttp-cors==0.7.0
    aiozipkin==1.1.0
    sentry-sdk==1.4.3

[bdist_wheel]
universal = 1

[options.entry_points]
console_scripts =
    platform-disk-api = platform_disk_api.api:main
    platform-disk-api-watcher = platform_disk_api.usage_watcher:main

[options.extras_require]
dev =
    black==21.9b0
    flake8==4.0.1
    flake8-isort==4.1.1
    mypy==0.910
    pre-commit==2.15.0
    types-pkg_resources==0.1.3
    aiodocker==0.21.0
    codecov==2.1.12
    pytest==6.2.5
    pytest-asyncio==0.16.0
    pytest-cov==3.0.0

[flake8]
max-line-length = 88
exclude =
    .git
    venv
    __pycache__

[isort]
line_length=88
include_trailing_comma=True
multi_line_output=3
force_grid_wrap=0
combine_as_imports=True
lines_after_imports=2
known_first_party=platform_disk_api,tests
default_section=THIRDPARTY

[tool:pytest]
testpaths = tests
filterwarnings=
    error
    ignore::DeprecationWarning:jose
    ; Remove the following when aiohttp is fixed (probably in 4.0.0 release)
    ignore::ResourceWarning:
    ignore::marshmallow.warnings.RemovedInMarshmallow4Warning:marshmallow

[coverage:run]
branch = True
source = platform_disk_api

[mypy]
check_untyped_defs = True
disallow_any_generics = True
disallow_untyped_defs = True
follow_imports = silent
strict_optional = True
warn_redundant_casts = True
warn_unused_ignores = True

[mypy-aiohttp_security]
ignore_missing_imports = true

[mypy-aiohttp_security.api]
ignore_missing_imports = true

[mypy-jose]
ignore_missing_imports = true

[mypy-neuro_auth_client.*]
ignore_missing_imports = true

[mypy-pytest]
ignore_missing_imports = true

[mypy-setuptools]
ignore_missing_imports = true

[mypy-trafaret]
ignore_missing_imports = true

[mypy-aiohttp_cors]
ignore_missing_imports = true

[mypy-aiohttp_apispec]
ignore_missing_imports = true
